# scripts

./: CNAME  README.md  git_bare_clone.py  install_windsurf.py  manage_scripts.py  pyproject.toml
